--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -64,5 +64,4 @@ install(
         owonpds
 	LIBRARY DESTINATION lib
 	ARCHIVE DESTINATION lib
-	RUNTIME DESTINATION bin
-)
+	RUNTIME DESTINATION bin)
